--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "8.5.1",
     "lodash": "^4.17.15",
     "log4js": "^6.1.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.9.22"
   },
   "devDependencies": {
